# drone-models

./: .gitignore  MANIFEST.in  README.md  mkdocs.yml  probieren.py  pyproject.toml
.github/workflows/: docs.yml  testing.yml
docs/: cite.md  gen_ref_pages.py  index.md
docs/concepts/: drone-models.md  index.md  parameters.md  transformations.md
docs/examples/: advanced.md  basic-usage.md  index.md
docs/get-started/: index.md  installation.md  quick-start.md
docs/stylesheets/: extra.css
drone_models/: __init__.py  controllers_numeric.py  core.py  drones.py  models.py  models_numeric.py  models_symbolic.py  transform.py
drone_models/controller/: __init__.py  constants.py  core.py  mellinger.py
drone_models/controller/mellinger/: __init__.py  control.py  params.py  params.toml
drone_models/data/: cf21B_500.xml  cf2x_L250.xml  cf2x_T350.xml  params.toml
drone_models/data/assets/cf21B/: cf21B_PropR.stl  cf21B_connector-pins.stl  cf21B_motors.stl  cf21B_pcb.stl
drone_models/data/assets/cf2x/: cf2xL_motors.stl  cf2x_P250.xml  cf2x_battery.stl  cf2x_pcb.stl
drone_models/first_principles/: __init__.py  model.py  params.py  params.toml
drone_models/models/: __init__.py  first_principles.py  symbols.py  utils.py
drone_models/models/data/: cf21B_500.xml  cf2x_P250.xml
drone_models/models/data/assets/cf21B/: cf21B_PropL.stl  cf21B_battery-holder.stl  cf21B_battery.stl  cf21B_connectors.stl  cf21B_header.stl  cf21B_prop-guards.stl
drone_models/models/data/assets/cf2x/: cf2xL_PropL.stl  cf2xL_PropR.stl  cf2xT_motors.stl  cf2x_battery-holder.stl  cf2x_connector-pins.stl  cf2x_connectors.stl  cf2x_motor-holder.stl
drone_models/models/identified/: so_rpy.py  so_rpy_rotor.py  so_rpy_rotor_drag.py
drone_models/so_rpy/: __init__.py  model.py  params.py  params.toml
drone_models/so_rpy_rotor/: __init__.py  model.py  params.py  params.toml
drone_models/so_rpy_rotor_drag/: __init__.py  model.py  params.py  params.toml
drone_models/utils/: __init__.py  cf2.py  constants.py  rotation.py
lsy_models/: const.py  controllers_numeric.py  dataclasses.py  models.py  models_numeric.py  models_symbolic.py  numeric.py  rotation.py  symbolic.py
lsy_models/data/: cf2x_+B250.xml  cf2x_-B250.xml  cf2x_L250.xml  cf2x_P250.xml  cf2x_T350.xml
lsy_models/utils/: cf2.py  const.py  constants.py  constants_controllers.py  rotation.py
tests/: conftest.py
tests/unit/: test_controller.py  test_models.py  test_numeric.py  test_parametrization.py  test_rot.py
